made my final responsivity, styling and alignment corrections

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,6 +6,24 @@
     --veryGreen: #0BF913;
 }
 
+.placeholderColor::placeholder{
+    color: var(--brightGreen);
+}
+
+#introTextYCenter{
+    width: 100%;
+    height: 85%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#horizontalLine{
+    border: 1px solid black; 
+
+}
+
 .veryGreenBg {
     background-color: var(--veryGreen);
 }
@@ -48,7 +66,7 @@ section {
 }
 
 .darkestGreenTxt {
-    color: var(--brightGreen);
+    color: var(--darkestGreen);
 }
 
 .boxShadow {
@@ -82,9 +100,24 @@ section {
     font-weight: bolder;
 }
 
-.card-img {
-    width: 230px;
-    height: 100px;
+.first-cards {
+    width: 100%;
+    height: 250px;
+}
+
+.first-cards img{
+    width: 100%;
+    height: 100%;
+}
+
+.secondCards {
+    width: 100%;
+    height: 150px;
+}
+
+.secondCards img{
+    width: 100%;
+    height: 100%;
 }
 
 #testimonialsCarousel{
@@ -105,24 +138,19 @@ section {
     min-width: 230px;
 }
 
-.introTextYCenter{
-    margin-top: 25%;
-}
 
 .navBarUl {
     margin-right: 20px;
 }
 
 #aboutPgBorder{
-    border: 7px solid var(--softerDarkGreen);
-    
+    border: 7px solid var(--softerDarkGreen); 
 }
 
 .contactIcons{
     height: 100px;
     width: 100px;
 }
-
 
  #form div>* {
     width: 100%;
@@ -133,12 +161,16 @@ section {
     width: 100%;
  }
 
+ .quickOverview {
+    width: 265px;
+ }
+
 
 
 /* max-width */
 @media screen and (width < 399px) {
  .landingPgPicWidth {
-    min-width: 150px;
+    min-width: 250px;
  }   
  .landingPgTxtWidth {
     min-width: 150px;
@@ -146,8 +178,9 @@ section {
  .introTxtWidth{
     min-width: 130px;
  }
- #form {
-    background-color: #027806;
+
+ #introTextYCenter{
+    margin-top: 0%;
  }
 }
-/* min-width = width >  */
+
